--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-This package has been developed by Praesto Team at Samsung Electronics Co., Ltd.
+version https://git-lfs.github.com/spec/v1
+oid sha256:ef07166afa844086c8c496cd3cd9020c3c20b48366049f3f2784bd9bb554d01c
+size 81
