--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,3 @@
-f2fs-tools-1.0.0 Tue Aug 14, 2012 KST
-    * The first release of f2fs-tools.
-f2fs-tools-1.0.1 Tue Jun 04, 2013 KST
-    * Added fsck and dump for f2fs-tools.
+version https://git-lfs.github.com/spec/v1
+oid sha256:71a651fb31565b6cc71fe15e4ba668dfb784e73adfe0b24d79f08ec757fe7fd2
+size 157
